<resources>
    <string name="app_name">GeotinListView3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_add">Add Post</string>
    <string name="button_view">View Posts</string>
    <string name="button_update">Update Post</string>
    <string name="button_delete">Delete Post</string>
</resources>
